<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:title="@string/sharedPreferencesTitle">
  <PreferenceCategory
  	android:title="@string/sharedInternetPreferencesTitle">
  	<EditTextPreference
  		android:key="baseServerAddressKey"
  		android:name="baseServerAddress"
  		android:title="@string/baseServerAddress"
  		android:summary="@string/baseServerAddressDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="uploadPackagesServletAddress"
  		android:name="uploadServerAddress"
  		android:title="@string/uploadPackagesServletAdress"
  		android:summary="@string/uploadPackagesServletAddressDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="getAvailableFormsListFromServletAddress"
  		android:name="getAvailableFormsList"
  		android:title="@string/getAvailableFormsListFromServletAddress"
  		android:summary="@string/getAvailableFormsListFromServletAddressDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="downloadFormsServletAddress"
  		android:name="downloadFormsServlet"
  		android:title="@string/downloadFormsServletAddress"
  		android:summary="@string/downloadFormsServletAddressDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="numberOfInternetConnectionAttempts"
  		android:inputType="number|numberSigned"
  		android:name="numberOfInternetAttempts"
  		android:title="@string/numberOfInternetAttempts"
  		android:summary="@string/numberOfInternetAttemptsDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="lastTimeApplicationCheckedForANewListOfFormsInTheServer"
  		android:name="lastTimeApplicationCheckedForANewListOfFormsInTheServer"
  		android:enabled="false"
  		android:title="@string/dateOfLastServerFormsListQuery">
  	</EditTextPreference>
  </PreferenceCategory>
  
  <PreferenceCategory
  	android:title="@string/sharedPersistancePreferencesTitle">
  	<EditTextPreference
  		android:key="formsPath"
  		android:name="formsSD_DirectoryPath"
  		android:title="@string/formsPath"
  		android:summary="@string/formsPathDescription">
  	</EditTextPreference>
  	<EditTextPreference
  		android:key="packagesPath"
  		android:name="packagesSD_DirectoryPath"
  		android:title="@string/packagesPath"
  		android:summary="@string/packagesPathDescription">
  	</EditTextPreference>
  </PreferenceCategory>
  <PreferenceCategory
  	android:title="@string/formPreferencesTitle">
  	<ListPreference
  		android:key="formThemeColor"
  		android:name="formThemeName"
  		android:title="@string/formColorTheme"
  		android:summary="@string/formColorThemeDescription"
		android:entries="@array/ArrayThemeColor"
		android:entryValues="@array/ArrayThemeColorValues">
  	</ListPreference>
  	<CheckBoxPreference
  		android:key="formPhotoSize"
  		android:name="formPhotoSizeName"
  		android:title="@string/formPhotoSizeTitle"
  		android:summary="@string/formPhotoSizeDescription" >
  	</CheckBoxPreference>
  </PreferenceCategory>
  <PreferenceCategory
  	android:title="@string/instancePreferencesTitle">
  	<CheckBoxPreference
  		android:key="allowSendingIncompleteInstances"
  		android:name="allowSendingIncompleteInstances"
  		android:title="@string/instanceAllowSendIncomplete"
  		android:summary="@string/instanceAllowSendIncompleteDescription">
  	</CheckBoxPreference>
  </PreferenceCategory>
  <PreferenceCategory
  	android:title="@string/visualPreferencesTitle">
  	<CheckBoxPreference
  		android:key="enableActivityBackgroundsKey"
  		android:name="enableActivityBackgrounds"
  		android:title="@string/enableBackgroundsTitle"
  		android:summary="@string/enableBackgroundsDescription">
  	</CheckBoxPreference>
  	<CheckBoxPreference
  		android:key="enableViewAnimationsKey"
  		android:name="enableViewAnimations"
  		android:title="@string/enableViewAnimations"
  		android:summary="@string/enableViewAnimationsDescription">
  	</CheckBoxPreference>
  	<CheckBoxPreference
  		android:key="slidingButtonsAnimationKey"
  		android:name="slidingButtonsanimation"
  		android:title="@string/slidingButtonsAnimation"
  		android:summary="@string/slidingButtonsAnimationDescription">
  	</CheckBoxPreference>	
  </PreferenceCategory>
  <PreferenceCategory
  	android:title="@string/sharedAdvancedPreferencesTitle">
  	<CheckBoxPreference
  		android:key="enableOptionsForUserApplicationDebugging"
  		android:name="enableOptionsForUserApplicationDebugging"
  		android:title="@string/enableUserDebuggingFeatures"
  		android:summary="@string/enableUserDebuggingFeaturesDescription">
  	</CheckBoxPreference>
  </PreferenceCategory>
</PreferenceScreen>
