<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res/com.geobloc"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
  <!-- Left side of the item -->
  <CheckBox
  	android:id="@+id/forms_manager_list_itemCb"
  	android:layout_alignParentLeft="true"
  	android:layout_width="48dip"
    android:layout_height="48dip">
  </CheckBox>
  <!-- Top -->
  <TextView
  	android:id="@+id/forms_manager_list_itemFormNameTextView"
  	android:layout_toRightOf="@id/forms_manager_list_itemCb"
  	android:layout_alignParentTop="true"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:textSize="18sp"
  	android:textStyle="bold"
  	android:textColor="#FFFFFF"
  	android:singleLine="true">
  </TextView>
  
  <!-- Below the form name, the version -->
  <TextView
  	android:id="@+id/forms_manager_list_itemFormVersionTextView"
  	android:text="@string/formsManager_list_item_FormVersionTextViewText"
  	android:layout_toRightOf="@id/forms_manager_list_itemCb"
  	android:layout_below="@id/forms_manager_list_itemFormNameTextView"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:textStyle="italic"
  	android:textColor="#FFFFFF">
  </TextView>
  
  <TextView
  	android:id="@+id/forms_manager_list_itemFormVersionNumberTextView"
  	android:layout_toRightOf="@id/forms_manager_list_itemFormVersionTextView"
  	android:layout_below="@id/forms_manager_list_itemFormNameTextView"
  	android:paddingLeft="2dp"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:textStyle="italic"
  	android:textColor="#FFFFFF">
  </TextView>
  
    <!-- On the right bottom corner, the form's status (update avaiable(green), current version, new(yellow) -->
   <!-- 
  <TextView
  	android:id="@+id/forms_manager_list_itemFormStatusInfoTextView"
  	android:textStyle="bold"
  	android:layout_alignParentRight="true"
  	android:paddingRight="7dp"
  	android:layout_below="@id/forms_manager_list_itemFormNameTextView"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content">
  </TextView>
  -->
  <TextView
  	android:id="@+id/forms_manager_list_itemFormStatusTextView"
  	android:textStyle="bold"
  	android:text="@string/formsManager_list_itemFormStatusTextViewText"
  	android:paddingRight="2dp"
  	android:layout_alignParentRight="true"
  	android:layout_below="@id/forms_manager_list_itemFormNameTextView"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:textSize="16sp">
  </TextView>
  <!-- Below the version is an Expandable List to show the form's description -->
  <com.geobloc.widget.ExpandableTextView
	android:id="@+id/forms_manager_list_itemFormDescriptionExpTextView"
	app:expandableTextViewTitle="@string/description"
	app:expandableTextViewOpen="false"
	android:layout_below="@id/forms_manager_list_itemFormVersionTextView"
	android:layout_toRightOf="@id/forms_manager_list_itemCb"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content">
  </com.geobloc.widget.ExpandableTextView>  
</RelativeLayout>
